# pug-weather-service

./: .gitignore  Dockerfile  README.md  forecast.json  main.py  pyproject.toml  run.sh  test.py
core/: __init__.py  dto.py  exceptions.py  logger.py  utils.py
core/services/: weather_api_handler.py
tests/: weather_api_handler_test.py
