[tool.poetry]
name = "weather_service"
version = "0.1.0"
description = ""
authors = ["radosz99 <241385@student.pwr.edu.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.79.0"
anyio = "3.6.1"
beautifulsoup4 = "4.11.1"
CacheControl = "0.12.11"
cachetools = "5.2.0"
cachy = "0.3.0"
certifi = "2022.6.15"
cffi = "1.15.1"
charset-normalizer = "2.1.0"
cleo = "0.8.1"
click = "8.1.3"
clikit = "0.6.2"
crashtest = "0.3.1"
cryptography = "37.0.4"
cycler = "0.11.0"
distlib = "0.3.5"
filelock = "3.8.0"
fonttools = "4.35.0"
geojson = "2.5.0"
h11 = "0.13.0"
html5lib = "1.1"
idna = "3.3"
importlib-metadata = "4.12.0"
jeepney = "0.8.0"
keyring = "23.8.2"
kiwisolver = "1.4.4"
lockfile = "0.12.2"
lxml = "4.9.1"
matplotlib = "3.5.3"
msgpack = "1.0.4"
numpy = "1.23.2"
packaging = "20.9"
pandas = "1.4.3"
pastel = "0.2.1"
pexpect = "4.8.0"
Pillow = "9.2.0"
pkginfo = "1.8.3"
platformdirs = "2.5.2"
poetry = "1.1.14"
poetry-core = "1.0.8"
ptyprocess = "0.7.0"
pycparser = "2.21"
pydantic = "1.9.2"
pylev = "1.4.0"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
pytz = "2022.2.1"
requests = "2.28.1"
requests-toolbelt = "0.9.1"
SecretStorage = "3.3.3"
shellingham = "1.5.0"
six = "1.16.0"
sniffio = "1.2.0"
soupsieve = "2.3.2.post1"
starlette = "0.19.1"
tomlkit = "0.11.4"
typing-extensions = "4.3.0"
ujson = "5.4.0"
urllib3 = "1.26.11"
uvicorn = "0.18.2"
virtualenv = "20.16.3"
webencodings = "0.5.1"
xarray = "2022.6.0"
zipp = "3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
