[tool.poetry]
name = "flask_weather_service"
version = "0.1.0"
description = ""
authors = ["radosz99 <241385@student.pwr.edu.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
cachetools = "^5.2.0"
requests = "^2.28.1"
jsonpickle = "^2.2.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
